all the other saved settings.


NEW: [features/improvements]
+Icon themes are now part of the plugin system so themes can be created and
installed through the plugin manager using python eggs.
+New icon theme based on Humility icons available through plugin manager.
+Improved highlighting for python (decorators are now supported)
+Support for highlighting (Inno Setup Scripts, Verilog)

BUG FIXES:
+Fixed a performance related bug that was most notable Editra was running on OSX.
+Clipboard related keybindings on GTK version
+Many UI fixes for when running on GTK
+Fixed a bug in adjusting theme colors for systems using themes that have lots
of black in them.
+Fixed error when loading files was raised when trying to open files that don't
have read permission.
+Fixed laggy checkboxes in Preferences Dialog
+Fixed errors that are caused when trying to drop some data type objects on the
text control for drag and drop open, such as Mac OSX textClippings.
+Fixed a bug in that could cause a crash when opening the file dialog
+Fixed a number of bugs related to saving and loading custom user profiles
during run time.
+Toolbar items status is now properly shown at all times
+Fixed a number of bugs related to the style editors behavior and how it affects
the editor when changes are made.
+Fixed some layout issues with the update checker/downloader
+Fixed code folding for Pascal and Shell script files
+Fixed Editra Style Sheet parser error for style sheets that have Windows eol
characters in them.
+Fixed flickering of toolbar when changing icon themes
+Don't send clipboard events to text control when it is not the control with the
capture.
+Fixed flickering when opening new pages in the notebook, this was most noticable
on Windows and GTK.
+FileBrowser plugin can now properly open files under the "Home directory" and
"Desktop" nodes.
+Fixed bug in CPP auto-commenting (patch from Rob McMullen)

#-----------------------------------------------------------------------------#
